--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 </div>
                 </div>
                 <div class="flow-image">
-                    <img src="./img/tep5.jpg" alt="">
+                    <img src="./img/step5.jpg" alt="">
                 </div>
             </div>
         </div>
