--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#main">トップ</a></li>
                 <li><a href="#works">実績</a></li>
                 <li><a href="#plan">プラン</a></li>
-                <li><a href="https://docs.google.com/forms/d/1tY3NYzRd3vsLNMqDqRSf-0w-noG0vEmU7Y-eQ-uKp5E/edit">お問い合わせ</a></li>
+                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSenHsHy7WyGg-M63VchNnEEmKVaXIouNoCi1u27xbPysYHlhQ/viewform?vc=0&c=0&w=1&flr=0">お問い合わせ</a></li>
             </ul>
         </nav>
 
@@ -32,7 +32,7 @@
                     <li><a href="#main" class="hm-list-li">トップ</a></li>
                     <li><a href="#works" class="hm-list-li">実績</a></li>
                     <li><a href="#plan" class="hm-list-li">プラン</a></li>
-                    <li><a href="https://docs.google.com/forms/d/1tY3NYzRd3vsLNMqDqRSf-0w-noG0vEmU7Y-eQ-uKp5E/edit" class="hm-list-li">お問い合わせ</a></li>
+                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSenHsHy7WyGg-M63VchNnEEmKVaXIouNoCi1u27xbPysYHlhQ/viewform?vc=0&c=0&w=1&flr=0">お問い合わせ</a></li>
                 </ul>
             </nav>
     </header>
@@ -393,7 +393,7 @@
                 <h2>お気軽にお問い合わせください</h2>
                 <p>Webサイト制作に関するご相談・お問い合わせ・お見積もり等のご依頼は<br>以下のお問い合わせフォームよりお願いします。</p>
             <div class="contact-form">
-                <a href="https://docs.google.com/forms/d/1tY3NYzRd3vsLNMqDqRSf-0w-noG0vEmU7Y-eQ-uKp5E/edit" class="contact-item">お問い合わせ</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSenHsHy7WyGg-M63VchNnEEmKVaXIouNoCi1u27xbPysYHlhQ/viewform?vc=0&c=0&w=1&flr=0">お問い合わせ</a>
             </div>
             </div>
         </section>
